--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Proma-Milestone 1</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,16 +17,83 @@
     <section class="sect">
         <div class="text">
             <h1><span class="skip">Skip</span> The Diet,<br>
-            Just Eat Healthy<br>
-            With My Food Network</h1>
+                Just Eat Healthy<br>
+                With My Food Network</h1>
             <p>Imagine you don't need a diet because we provide<br> healthy and delicious food for you! </p>
             <a class="order-button" target="_blank" href="">Order Food</a>
         </div>
-        <div class="image-width">
+        <div class="img1">
             <img id="pic1" src="images/female/Group 8425.png" alt="picture 1">
         </div>
 
     </section>
+    <section class="famous-chefs">
+        <div class="img2">
+            <img id="pic2"
+                src="images/female/kisspng-healthy-diet-food-eating-nutrition-woman-diet-5b20e260c13c04.3441013515288817607915-removebg-preview.png"
+                alt="picture 2">
+        </div>
+        <div class="chef">
+            <h1>About Chefs</h1>
+            <p align="justify">Chefs are a part of one of the largest industries in the world, without whose presence
+                the food industry
+                would cease to exist. They are highly-skilled certified cooks, who are well-versed in all the facets of
+                food planning and execution. Traditionally, chefs go through laborious training and have to be extremely
+                passionate when it comes to their profession. Before ascending to the position of head chef, they
+                originally start out as ‘sous-chefs’ or apprentices in the kitchen and slowly progress to executive chef
+                and finally, head chef. One of the oldest documented professional chefs in the world was Guillaume
+                Tirel, who was fondly known as ‘Taillevent’. From then on, there has been an explosion in the number of
+                chefs around the world, all working towards making the food industry bigger, from their respective
+                homelands and while specializing in diverse cuisines. From Adriano Zumbo to Nigella Lawson and Luke
+                Thomas to Sanjeev Kapoor, there is no dearth of chefs around the world who are all working towards a
+                common aim with their signature white jackets and white hats—to promote the joy of cooking and serving
+                others while consistently working towards building a bigger and a more passionate world for food</p>
+            <a class="contact-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">Contact
+                Me</a>
+        </div>
+    </section>
+    <section>
+        <h1 class="recipes">My Recipes</h1>
+        <div class="style">
+            <p align="center">This is I own style guide and loose list of rules. <br>Of course, there are endless exceptions and little
+                side-rules.<br> There are also styles that certain publications use that <br>I may be used to and that may
+                be different from what I present here.</p>
+        </div>
+        <section class="recipe-area">
+            <div class="thai-soup" id="">
+                <img class="img3" src="images/food/Project Cover2.png" alt="">
+                <h2 align="center">THAI SOUP</h2>
+                <p class="soup">This is a masterpiece seafood soup. You might be surprised it came from your kitchen, with such a nice
+                    blend of elegant flavors and texture.Very simple, rich and healthy soup using udon noodles, which have
+                    become very popular in Thai cuisine, together with our Ground Chilli with Fried Garlic paste.
+                </p>
+            </div>
+            <div class="thai-soup" id="">
+                <img class="img3" src="images/food/Project Cover8.png" alt="fruit-salad">
+                <h2 align="center">Fresh Fruit Bowl Baby </h2>
+
+                <p class="soup">In 1-cup microwavable measuring cup, mix dressing     ingredients. Microwave uncovered on High 20 to 30
+                    seconds or until hot. Cool completely, about 15 minutes.In very large bowl, mix salad ingredients. Pour
+                    dressing over fruit; toss gently to coat and it contains vitamins and minerals.
+                </p>
+            </div>
+            <div class="thai-soup" id=" ">
+                <img class="img3" src="images/food/Project Cover6.png" alt="">
+                <h2 align="center" >Yummy Pancake </h2>
+
+                <p class="soup">In a large bowl, sift together the flour, baking powder, salt and sugar. Make a well in the center and pour in the milk, egg and melted butter; mix until smooth.Heat a lightly oiled griddle or frying pan over medium-high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each pancake. 
+                </p>
+
+            </div>
+        </section>
+    </section>
+
+    <footer>
+        <h2><span class="skip">FOOD</span> NETWORK</h2>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
+
+
 
 
 
