--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="famous-chefs">
         <div class="img2">
             <img id="pic2"
-                src="images/female/kisspng-healthy-diet-food-eating-nutrition-woman-diet-5b20e260c13c04.3441013515288817607915-removebg-preview.png"
+                src="images/female/Person Image.png"
                 alt="picture 2">
         </div>
         <div class="chef">
@@ -48,7 +48,7 @@
                 Thomas to Sanjeev Kapoor, there is no dearth of chefs around the world who are all working towards a
                 common aim with their signature white jackets and white hats—to promote the joy of cooking and serving
                 others while consistently working towards building a bigger and a more passionate world for food</p>
-            <a class="contact-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">Contact
+            <a class="contact-button" target="_blank" href="https://www.linkedin.com/in/proma-kanungoe/">Contact
                 Me</a>
         </div>
     </section>
